<?xml version='1.0' encoding='UTF-8'?>
<resources>
  <string name="app_name">TimeTracker Geo Client</string>
  <string name="app_logo">TimeTracker</string>
  <string name="shortcut_start">TimeTracker - Start</string>
  <string name="shortcut_stop">TimeTracker - Stop</string>
  <string name="shortcut_sos">TimeTracker - SOS</string>


  <string name="settings_id_title">User ID</string>


  <string name="settings_address_title">Server address</string>
  <string name="settings_address_summary">Domain name or IP address</string>
  <string name="settings_port_title">Server port</string>
  <string name="settings_port_summary">Tracking server TCP port</string>
  <string name="settings_interval_title">Frequency (seconds)</string>
  <string name="settings_interval_summary">Reporting interval in seconds</string>
  <string name="settings_distance_title">Distance (meter)</string>
  <string name="settings_distance_summary">Reporting distance in meters</string>
  <string name="settings_angle_title">Angle (degrees)</string>
  <string name="settings_angle_summary">Reporting angle in degrees</string>


  <string name="settings_status_title">Geo Tracking</string>
  <string name="settings_status_off">Start</string>
  <string name="settings_status_on">Stop</string>
  <string name="settings_status_off_summary">Service stopped</string>
  <string name="settings_status_on_summary">Service running</string>


  <string name="settings_secure_title">Encryption</string>
  <string name="settings_secure_off">Enable</string>
  <string name="settings_secure_on">Disable</string>
  <string name="settings_secure_off_summary">Encryption disabled</string>
  <string name="settings_secure_on_summary">Encryption enabled</string>
  <string name="settings_provider_title">Location provider</string>
  <string name="settings_provider_summary">Source of location data</string>
  <string name="settings_provider_gps">GPS provider</string>
  <string name="settings_provider_network">Network provider</string>
  <string name="settings_provider_mixed">Mixed provider</string>
  <string name="settings_foreground_title">Foreground service</string>
  <string name="settings_foreground_summary">Increase service priority</string>
  <string name="menu_status">Status</string>
  <string name="menu_about">About</string>
  <string name="menu_shortcuts">Add shortcuts</string>
  <string name="menu_clear">Clear</string>
  <string name="about_description">Real time GPS tracker for Android devices.</string>
  <string name="about_license">This application is free and open source, the source code is licensed under GNU AGPLv3 and available on GitHub.</string>
  <string name="about_web">For more information visit \n www.timetracker.cc</string>
  <string name="status_service_create">Service created</string>
  <string name="status_service_destroy">Service destroyed</string>
  <string name="status_send_success">Send successfully</string>
  <string name="status_send_fail">Send failed</string>
  <string name="status_location_update">Location update</string>
  <string name="status_connectivity_change">Connectivity change</string>
  <string name="hidden_app_name">Device Settings</string>
  <string name="hidden_alert">The app has been hidden. To open it again please dial 8722227 (TRACCAR).</string>

  <string name="basic_app_name">GeoTracking Client</string>
  <string name="traccar_about_license">It is free and open source, the source code is licensed under Apache License Version 2.0 and available on GitHub.</string>
  <string name="traccar_about_description">The basic Application is from Traccar Android Client (4.1).</string>
  <string name="traccar_about_web">For more information visit \n www.traccar.org/client</string>
  <string name="version">Version: V1.0</string>

  <!--<string name="delete">Delete Data</string>-->
</resources>
