<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/about_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/timetracker_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/about_margin"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/timetracker_logo" />
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_spacing"
            android:layout_marginTop="@dimen/about_margin"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_spacing"
            android:text="@string/about_description" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_spacing"
            android:text="@string/about_license" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_spacing"
            android:autoLink="web"
            android:text="@string/about_web" />






        <View
            android:layout_width="200dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/about_margin"
            android:layout_marginBottom="@dimen/about_spacing"
            android:background="@android:color/background_dark"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_spacing"
            android:text="@string/traccar_about_description" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_spacing"
            android:text="@string/traccar_about_license" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/about_spacing"
            android:autoLink="web"
            android:text="@string/traccar_about_web" />
    </LinearLayout>
</RelativeLayout>
